--- a/public/add_child.html
+++ b/public/add_child.html
@@ -33,7 +33,7 @@
         <li><a href="/add_child.html" class="navbar-link active">Children</a></li>
         <li><a href="/therapists.html" class="navbar-link">Therapists</a></li>
         <li><a href="/help.html" class="navbar-link">Help</a></li>
-        <li><a href="/login.html" class="navbar-link" id="account-link">Account</a></li>
+        <li><a href="/account.html" class="navbar-link" id="account-link">Account</a></li>
       </ul>
     </div>
   </nav>
