--- a/public/therapists.html
+++ b/public/therapists.html
@@ -36,7 +36,7 @@
         <li><a href="/add_child.html" class="navbar-link">Children</a></li>
         <li><a href="/therapists.html" class="navbar-link active">Therapists</a></li>
         <li><a href="/help.html" class="navbar-link">Help</a></li>
-        <li><a href="/login.html" class="navbar-link" id="account-link">Account</a></li>
+        <li><a href="/account.html" class="navbar-link" id="account-link">Account</a></li>
       </ul>
     </div>
   </nav>
